--- a/MongolzEmail/src/main/resources/templates/alertReceivedMail.html
+++ b/MongolzEmail/src/main/resources/templates/alertReceivedMail.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title th:remove="all">Template for Order email </title>
+        <title th:remove="all">Template for Transaction Detail </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
     
     <div style="font-size:20px"><em>What ever you need ---</em>
            <div style="text-indent: 8em;">
-            <img src="cid:imtheguy"  height="80" width="80" /><em>  .com</em>
+            <img src="cid:mongolzimg"  height="80" width="80" /><em>  .com</em>
    		  </div> 
     </div>
         <p> Greetings  <span th:text="${name}"> </span> </p>
   
-            <H4> We have received your order and are Processing it !</H4>
+            <H4> We have received your transaction and are Processing it !</H4>
   
         <p>Here are your Transaction details:</p>
  		<b>Transaction Number: </b> <span th:text="${transaction.transaction.id}"></span>
- 		
-<!--          <div th:each="item : ${order.items}" >  -->
-  <div style="text-indent: 3em;">		
-	 		<p><b>Name: </b> <span th:text="${transaction.transaction.amount}"></span></p>
-	 		<p><b>From Account: </b> <span th:text="${transaction.transaction.fromAccount}"></span></p>
-	 		<p><b>To Account: </b> <span th:text="${transaction.transaction.toAccount}"></span></p>
+
+  <div style="text-indent: 3em;">
+	 		<p><b>From Account: </b> <span th:text="${transaction.transaction.fromAccount.id}"></span></p>
+	 		<p><b>To Account: </b> <span th:text="${transaction.transaction.toAccount.id}"></span></p>
+            <p><b>Amount: </b> <span th:text="${transaction.transaction.amount}"></span></p>
 	 		<p><b>Transaction date: </b> <span th:text="${transaction.transaction.transactionDate}"></span></p>
-<!-- 	 		<p><b>Price: </b> <span th:text="${item.product.price}"></span></p> -->
-</div>	
-<!-- 	 		<p><b>Total: </b> <span th:text="${item.quantity} * ${item.product.price}"></span></p>
-		</div>
- -->		
- 		
+</div>
          <p><br />
             Thanks for your transaction, <br />
-            &emsp; <em><b>I'm the Guy! - Online</b></em>
+            &emsp; <em><b>I'm the Guy! - Online Bank</b></em>
         </p>
     </body>
 </html>
